data/collection/fixes/descriptions/scala/scala-12254
In fact, it's not an extractor type at all:

```scala
object Test {
  sealed trait Foo
  final class Bar extends Foo

  object Bar {
    def unapply(o: Bar) : true = true
  }

  def f(foo: Foo) = foo match {
    case Bar() => println("Bar")
  }
}

Test.scala:10: error: The result type of an unapply method must contain a member `get` to be used as an extractor pattern, no such member exists in true
    case Bar() => println("Bar")
         ^
1 error
```

_Originally posted by @robby-phd in https://github.com/scala/bug/issues/12232#issuecomment-735774442_